Json naming issues, wrap on modal tags

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -422,6 +422,7 @@
                 color: $secondColor;
                 display: flex;
                 flex-direction: row;
+                flex-wrap: wrap;
                 gap: 1rem;
 
                 p{
